--- a/public/admin/css/configuration.css
+++ b/public/admin/css/configuration.css
@@ -27,7 +27,7 @@
   padding: 2%;
   border-radius: 0.5em;
   border: 0.15em solid green;
-  border-left: 0.5em solid green;
+  border-left: 0.5rem solid green;
   /* border-bottom: 0.5em solid green; */
   /* box-shadow: 0 6px 16px rgba(85, 12, 10, 0.4); */
   margin-bottom: 0.9rem;
@@ -42,7 +42,7 @@
   background-color: #d3eec3;
 
   padding: 2%;
-  border-radius: 0.5em;
+  border-radius: 0.5rem;
   border: 0.15rem solid rgb(124, 179, 124);
 }
 
@@ -188,20 +188,21 @@ hr {
 .input {
   border: 2px solid transparent;
   width: 15em;
-  height: 2.5em;
+  height: 2rem;
   padding-left: 0.8em;
   outline: none;
   overflow: hidden;
   background-color: #f3f3f3;
   border-radius: 0.5em;
   /* transition: all 0.5s; */
-  border: 0.03em solid green;
+  border: 0.03rem solid green;
 }
 
 .input:hover,
 .input:focus {
-  border: 2px solid green;
-  box-shadow: 0px 0px 0px 7px rgba(74, 236, 136, 0.2);
+  border: 0.149rem solid green;
+  box-shadow: 0 0 12px 2px rgba(74, 236, 136, 0.2);
+  /* box-shadow: 0px 0px 0px 7px rgba(74, 236, 136, 0.2); */
   background-color: white;
 }
 
