--- a/public/admin/css/system-edit-account.css
+++ b/public/admin/css/system-edit-account.css
@@ -58,17 +58,17 @@
   flex-direction: column;
 }
 
-#form-details div {
+#form-details .form-details-container {
   display: flex;
   margin-top: 5%;
 }
 
-#form-details > div label {
+#form-details .form-details-container label {
   min-width: 30%;
   font-weight: bold;
 }
 
-#form-details > div input {
+#form-details .form-details-container .input {
   min-width: 70%;
   height: 2rem;
   background-color: white;
@@ -80,10 +80,23 @@
   outline: 0;
 }
 
-input:hover,
-input:focus {
+/* .input:hover,
+.input:focus {
   border: 0.149rem solid rgb(58, 58, 175) !important;
-  /* box-shadow: 0 0 12px 2px rgba(59, 59, 208, 0.388); */
+   box-shadow: 0 0 12px 2px rgba(59, 59, 208, 0.388); 
+} */
+
+/* Hover effect for enabled inputs (when in edit mode) */
+.input:enabled:hover,
+.div-input:hover {
+  border: 0.149rem solid rgb(58, 58, 175) !important; /* Use a text cursor or any other desired cursor */
+}
+
+/* Override hover for disabled inputs (when not editing) */
+.input:disabled:hover {
+  border-color: inherit; /* No border color change */
+  box-shadow: none;
+  cursor: default !important; /* Default cursor */
 }
 
 #button-edit,
@@ -240,8 +253,8 @@ input:focus {
 }
 
 /* If you are not wrapping the second and third fields in a flex container,
-     you can force the label and input to use the same inline-block layout */
-#new-password-section > div {
+     you can force the label and .input to use the same inline-block layout */
+#new-password-section .form-details-container {
   /* This applies to all immediate div children of #new-password-section that hold a field */
   display: flex;
   align-items: center;
@@ -249,7 +262,7 @@ input:focus {
   margin-top: 1rem;
 }
 
-/* For the input container – ensuring it takes up the remaining space */
+/* For the .input container – ensuring it takes up the remaining space */
 #new-password-section .password-wrapper,
 #new-password-section [style*="position: relative"] {
   position: relative;
@@ -257,7 +270,7 @@ input:focus {
 }
 
 /* Ensure inputs are full-width in their container */
-#new-password-section input {
+#new-password-section .input {
   width: 100%;
   padding-right: 2rem;
 }
@@ -287,7 +300,7 @@ label {
   width: auto;
 }
 
-#new-password-section input[type="password"] {
+#new-password-section .input[type="password"] {
   width: 100%;
   padding-right: 2rem;
 }
@@ -311,4 +324,16 @@ label {
     text-align: left;
     margin-bottom: 0.25rem;
   }
+}
+
+.input-in-div,
+.input-in-div:focus {
+  outline: none;
+  border: none;
+  box-shadow: none;
+}
+
+.div-input {
+  border: none !important;
+  background: transparent; /* optional: to match the desired style */
 }
